<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/background"
    tools:context=".SummaryActivity">

    <include
        layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

    <TextView
        android:id="@+id/summary_welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:text="@string/summary_acc"
        android:textSize="24sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_name"
        android:text="Text"
        android:textStyle="bold"
        android:textSize="24dp"
        />


    <com.anychart.AnyChartView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/White"
        android:layout_marginTop="20dp">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:foregroundGravity="center_horizontal" />
    </com.anychart.AnyChartView>


    <RadioGroup
        android:id="@+id/select_duration"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/weekly"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            android:text="@string/weekly" />

        <RadioButton
            android:id="@+id/monthly"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/monthly" />

        <RadioButton
            android:id="@+id/daily"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/daily" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Total_income"
            android:textColor="@color/White"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/total_income"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:textColor="@color/Black"
            android:textColorHighlight="@color/LightBlue"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Total_expense"
            android:textColor="@color/White"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/total_expense"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:textColorHighlight="@color/LightBlue"
            android:textColor="@color/Black"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/del_account_btn"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/Red"
        android:text="Delete Account"
        android:layout_marginTop="50dp"
        android:textSize="20dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>